fix: safari sub-pixel bleeding edge on hero video

--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,8 @@ img {
   width: 100%;
   height: 100%;
   background: #010101;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
+  -webkit-transform: scale(1.01) translateZ(0);
+  transform: scale(1.01) translateZ(0);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
